--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,27 +3,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Photos</h2>
+                    <h3 class="section-subheading text-muted">Take a look at our beautiful apartments!</h3>
                 </div>
             </div>
             <div class="row">
-            {% for post in site.posts %}
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+            {% for image in site.static_files %}
+                {% if image.path contains 'img/Apartment' %}
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                        <a href="#{{ image.basename }}" class="portfolio-link" data-toggle="modal">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
                             </div>
-                        </div>
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>{{ post.title }}</h4>
-                        <p class="text-muted">{{ post.subtitle }}</p>
+                            <img src="{{ site.baseurl }}{{ image.path }}" class="img-responsive img-centered" alt="">
+                        </a>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
-            </div>
+                </div>
         </div>
     </section>
